# jobs

./: .gitignore  Dockerfile.2.7  Dockerfile.3.10  Dockerfile.3.11  Dockerfile.3.4  Dockerfile.3.5  Dockerfile.3.6  Dockerfile.3.7  Dockerfile.3.8  Dockerfile.3.9  Dockerfile.docs  Makefile  README.rst  __init__.py  changelog.txt  docker-compose.2.7.yaml  docker-compose.3.10.yaml  docker-compose.3.11.yaml  docker-compose.3.4.yaml  docker-compose.3.5.yaml  docker-compose.3.6.yaml  docker-compose.3.7.yaml  docker-compose.3.8.yaml  docker-compose.3.9.yaml  docker-compose.docs.yaml  jobs.py  pyproject.toml  setup.py  test_jobs.py
_docs/: conf.py  index.rst  jobs.rst
